Fix text wrapping in alert description
We set a `word-break: break-word` to force wrapping on long strings, such as SSH keys

--- a/packages/components/app/styles/components/alert.scss
+++ b/packages/components/app/styles/components/alert.scss
@@ -57,6 +57,7 @@
 .hds-alert__description {
   color: var(--token-color-foreground-primary);
   font-weight: var(--token-typography-font-weight-regular);
+  word-break: break-word;
 
   .hds-alert__title + & {
     margin-top: 4px;
